# py-glslang

./: .gitignore  CMakeLists.txt  LICENSE  Node.cpp  Node.h  Parsed.h  README.md  Stage.h  Traverser.h  __main__.py  ast.out.first  bindings.cpp  emit.cpp  enums.h  main.py  module.cpp  module.h  parse.cpp  pyglslang.cp313-win_amd64.pyd  render.cpp
bindings/: CMakeLists.txt  module.cpp
src/: Node.cpp  Node.h  NodeSource.h  TraverseLog.h  Traverser.cpp  Traverser.h  emit.cpp  emitFromSpirv.cpp  module.h  op_str.h  parse.cpp  parse_const.h  parse_op.h  parse_type.h
src/spirv/: FloatFormatter.h  emit.cpp
tests/: CMakeLists.txt  __init__.py  ast.py  test_emit.cpp  test_parse.cpp
